Font-size bump for tablets and phones on the outfitting screen. Seems to make life a bit easier. Also added a small-tablet size option which will fix a tiny visual bug on the outfitting screen with long ship names. Fixed a few other minor visual bugs. Also made clickable menu items bigger on tablets and phones.

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -79,6 +79,15 @@ header {
     -webkit-overflow-scrolling: touch;
     max-height: 400px;
 
+    .tablet({
+      font-size: 1.1em;
+      max-height: 800px;
+
+      a {
+        padding: 0.3em 0;
+      }
+    });
+
     &.dbl {
       -webkit-column-count: 2; /* Chrome, Safari, Opera */
       -moz-column-count: 2; /* Firefox */
