--- a/app/less/responsive.less
+++ b/app/less/responsive.less
@@ -21,6 +21,13 @@
   }
 }
 
+.smallTablet(@rules) {
+  @media only screen and /*(min-width: 641px) and */(max-width: 820px) {
+    @rules();
+  }
+}
+
+
 .tablet(@rules) {
   @media only screen and /*(min-width: 601px) and */(max-width: 1024px) {
     @rules();
